--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
             <artifactId>PasswordGenerator</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.3.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
